syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.DigitalIDContract";

service DigitalIDContract {
    option (aelf.csharp_state) = "AElf.Contracts.DigitalIDContract.DigitalIDContractState";

    // Actions
    rpc AddInfo (google.protobuf.StringValue) returns (google.protobuf.Empty){
    }
    rpc AddCall (google.protobuf.StringValue) returns (google.protobuf.Empty){
    }
    rpc AddUser (google.protobuf.StringValue) returns (google.protobuf.Empty){
    }
    rpc DelUser (google.protobuf.StringValue) returns (google.protobuf.Empty){
    }

    // Views
    rpc GetStuff (aelf.Hash) returns (Stuff){
        option (aelf.is_view) = true;
    }
    
}

message Stuff {
    repeated string info = 1;
    aelf.Hash adre = 2;
    repeated string adresses = 3;
    repeated string call = 4;
}